--- a/index.html
+++ b/index.html
@@ -71,5 +71,44 @@
 <br>
     <a href="http://depositfiles.com/files/lixhi7w8y" target="_blank">5. depositfiles.com</a>
     </details>
+     <br>
+     <br>
+     <div id="disqus_thread"></div>
+
+<script>
+
+    /**
+
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+
+    /*
+
+    var disqus_config = function () {
+
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+
+    };
+
+    */
+
+    (function() { // DON'T EDIT BELOW THIS LINE
+
+    var d = document, s = d.createElement('script');
+
+    s.src = 'https://lachin3.disqus.com/embed.js';
+
+    s.setAttribute('data-timestamp', +new Date());
+
+    (d.head || d.body).appendChild(s);
+
+    })();
+
+</script>
+
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
    </body> 
 </html>
